# SDIAT_GEANT4

Opposite/: CMakeLists.txt  CODE_ANALYSIS.md  JobWork_H.jdf  JobWork_He.jdf  JobWork_test.jdf  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_2.md  ReadAndTest.py  SparticleCalculate.py  dataout01.txt  manager.py  test02.cc  test2.mac  testdd  testdd.cc  vis.mac
Opposite/ctable/: all_-160_25.csv  all_-170_-25.csv  all_160_-25.csv  layers_lat_-10.csv  layers_lat_-15.csv  layers_lat_-20.csv  layers_lat_-25.csv  layers_lat_-30.csv  layers_lat_-35.csv  layers_lat_-40.csv  layers_lat_-45.csv  layers_lat_-5.csv  layers_lat_-50.csv  layers_lat_-55.csv  layers_lat_-60.csv  layers_lat_-65.csv  layers_lat_-70.csv  layers_lat_-75.csv  layers_lat_-80.csv  layers_lat_-85.csv  layers_lat_-90.csv  layers_lat_0.csv  layers_lat_10.csv  layers_lat_15.csv  layers_lat_20.csv  layers_lat_25.csv  layers_lat_30.csv  layers_lat_35.csv  layers_lat_40.csv  layers_lat_45.csv  layers_lat_5.csv  layers_lat_50.csv  layers_lat_55.csv  layers_lat_60.csv  layers_lat_65.csv  layers_lat_70.csv  layers_lat_75.csv  layers_lat_80.csv  layers_lat_85.csv
Opposite/include/: ActionInitialization.hh  BinaryReader.hh  DetectorConstruction.hh  DirectionData.hh  EventAction.hh  FieldMessenger.hh  MyMagneticField.hh  MyRun.hh  MySession.hh  MyStackingAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SphericalSystemHitinAir.hh  SphericalSystemHitinOrbit.hh  SphericalSystemSDinAir.hh  SphericalSystemSDinOrbit.hh  SteppingAction.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh
Opposite/mypylib/: RotationModel.py  __init__.py  tracing.py
Opposite/result/: HitChargePdata0_0.root  HitChargePdata0_30.root  HitChargePdata1_0.root  HitChargePdata2_0.root  HitChargePdata3_0.root  HitChargePdata4_0.root  HitChargePdata5_0.root  seconddata0_0_t0.root  seconddata0_0_t1.root  seconddata0_0_t10.root  seconddata0_0_t11.root  seconddata0_0_t12.root  seconddata0_0_t13.root  seconddata0_0_t14.root  seconddata0_0_t15.root  seconddata0_0_t16.root  seconddata0_0_t17.root  seconddata0_0_t18.root  seconddata0_0_t19.root  seconddata0_0_t2.root  seconddata0_0_t20.root  seconddata0_0_t21.root  seconddata0_0_t22.root  seconddata0_0_t23.root  seconddata0_0_t24.root  seconddata0_0_t25.root  seconddata0_0_t26.root  seconddata0_0_t27.root  seconddata0_0_t28.root  seconddata0_0_t29.root  seconddata0_0_t3.root  seconddata0_0_t30.root  seconddata0_0_t31.root  seconddata0_0_t4.root  seconddata0_0_t5.root  seconddata0_0_t6.root  seconddata0_0_t7.root  seconddata0_0_t8.root  seconddata0_0_t9.root  seconddata0_30_t0.root  (+31 more)
Opposite/run/: run-mac-gen.cc
Opposite/run_command/: shell-generate  shell-generate.cc  test.sh
Opposite/src/: ActionInitialization.cc  BinaryReader.cc  DetectorConstruction.cc  DirectionData.cc  EventAction.cc  FieldMessenger.cc  MyMagneticField.cc  MyStackingAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SphericalSystemHitinAir.cc  SphericalSystemHitinOrbit.cc  SphericalSystemSDinAir.cc  SteppingAction.cc  (+4 more)
(+124 files in other folders)
